--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "start-dev": "nodemon src/app.js -e js,html,css,hbs"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "express": "^4.16.4",
-    "hbs": "^4.0.3",
+    "hbs": "^4.0.3"
+  },
+  "devDependencies": {
     "nodemon": "^1.18.10"
   }
 }
